fixed landing background img not showing by changing css url path

--- a/css/main.css
+++ b/css/main.css
@@ -223,8 +223,8 @@ h3 {
   left: 0;
   width: 100%;
   height: 100%;
-  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 33, 7, 0.5)), to(rgba(0, 0, 0, 0.5))), url("/asset/img/showcase.jpg") no-repeat center center/cover;
-  background: linear-gradient(0deg, rgba(44, 33, 7, 0.5), rgba(0, 0, 0, 0.5)), url("/asset/img/showcase.jpg") no-repeat center center/cover;
+  background: -webkit-gradient(linear, left bottom, left top, from(rgba(44, 33, 7, 0.5)), to(rgba(0, 0, 0, 0.5))), url("../asset/img/showcase.jpg") no-repeat center center/cover;
+  background: linear-gradient(0deg, rgba(44, 33, 7, 0.5), rgba(0, 0, 0, 0.5)), url("../asset/img/showcase.jpg") no-repeat center center/cover;
   z-index: -1;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
