--- a/sass/Sections/_header.scss
+++ b/sass/Sections/_header.scss
@@ -84,7 +84,7 @@
         width: 100%;
         height: 100%;
 
-        background: linear-gradient(0deg, rgba(44, 33, 7, 0.5), rgba(0, 0, 0, 0.5)), url('/asset/img/showcase.jpg')
+        background: linear-gradient(0deg, rgba(44, 33, 7, 0.5), rgba(0, 0, 0, 0.5)), url('../asset/img/showcase.jpg')
         no-repeat center center/cover;
         z-index: -1;
 
